<resources>
    <string name="app_name">PT-Platform</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_coach">Choose your </string>
    <string name="loading">Loading ... </string>
    <string name="_100_cal">100 \nCal</string>
    <string name="_16_2g">16% \n2g</string>
    <string name="_4_1g">c</string>
    <string name="_80_22g">80% \n22g</string>
    <string name="request_sent">Request Sent!</string>
    <string name="terms_condiditions"><![CDATA[Terms & Condiditions]]></string>
    <string name="finish">Finish</string>
    <string name="set_number">Set Number</string>
    <string name="weight_unit">Weight Unit</string>
    <string name="weight">Weight</string>
    <string name="repititions">Repititions</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="select_your_coach">Select Your Coach</string>
    <string name="calendar">Calendar</string>
    <string name="tell_us">Tell us</string>
    <string name="about_you">About You</string>
    <string name="i_am_a_coach">I am a Coach</string>
    <string name="i_am_a_trainee">I am a Trainee</string>
    <string name="next">Next</string>
    <string name="verify_email">Verify Email</string>
    <string name="email">Email</string>
    <string name="verify">Verify</string>
    <string name="home">Home</string>
    <string name="coach">Coach</string>
    <string name="profile">Profile</string>
    <string name="not_authorized">Not Authorized!</string>
    <string name="please_subscribe_to_proceed">Please Subscribe to proceed!</string>
    <string name="subscribe">Subscribe</string>
    <string name="please_enter_the_verification_code_that_we_have_sent_to_your_email">Please enter the verification code that we have sent to your email</string>
    <string name="didn_t_receive_one_send_again">Didn’t receive one? Send again</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="name">name</string>
    <string name="buy">buy</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_you_password">Forgot you password?</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="don_t_have_an_account_sign_up_here">Don’t have an account? Sign up here</string>
    <string name="i_am_a">I am a</string>
    <string name="trainee">Trainee</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="social_media_link">Social media link</string>
    <string name="potential_clients">Potential clients</string>
    <string name="step_counter">Step Counter</string>
    <string name="thank_you">Thank you!</string>
    <string name="our_team_will_get_back_to_you_soon">Our team will get back to you soon!</string>
    <string name="add_new_value">Add New Value</string>
    <string name="date">DATE: </string>
    <string name="neck">NECK: </string>
    <string name="chest">CHEST:</string>
    <string name="left_arm">LEFT ARM: </string>
    <string name="right_arm">RIGHT ARM :</string>
    <string name="waist">WAIST :</string>
    <string name="belly">BELLY :</string>
    <string name="lower_belly">LOWER BELLY :</string>
    <string name="upper_belly">UPPER BELLY :</string>
    <string name="hips">HIPS :</string>
    <string name="left_thigh">LEFT THIGH :</string>
    <string name="right_thigh">RIGHT THIGH :</string>
    <string name="left_calf">LEFT CALF :</string>
    <string name="right_calf">RIGHT CALF :</string>
    <string name="update">Update</string>
    <string name="muscle">Muscle</string>
    <string name="fat">Fat</string>
    <string name="water">Water</string>
    <string name="active_calories">Active Calories</string>
    <string name="steps">Steps</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="username">Username</string>
    <string name="search_for_food">SEARCH FOR FOOD</string>
    <string name="search">Search</string>
    <string name="gallery">gallery</string>
    <string name="camera">Camera</string>
    <string name="select_language">Select Language?</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="enter_your_details_to_ensure_an_experience_custom_made_for_you">Enter your details to ensure an experience custom-made for you</string>
    <string name="done">Done</string>
    <string name="assigned_coaches">Assigned Coaches</string>
    <string name="coach_s_name_availabilty">COACH’S NAME AVAILABILTY:</string>
    <string name="available_times">Available Times</string>
    <string name="no_available">There are no available appointments on </string>
    <string name="rejected">Rejected</string>
    <string name="requesed">Requested</string>
    <string name="rejected_message">you are rejected please contact support</string>
    <string name="no_reservation">No Reservations</string>
    <string name="label">Label</string>
    <string name="time">Time</string>
    <string name="status">Status</string>
    <string name="nutrition">Nutrition</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string-array name="activity">
        <item>little or no exercise</item>
        <item>sports 1–3 days/week</item>
        <item>sports 6–7 days/week</item>
        <item>sports and a physical job</item>
    </string-array>
    <string name="calculate">Calculate</string>
    <string name="challenges">Challenges</string>
    <string name="challenge_of_the_day">Challenge Of The Day</string>
    <string name="morning_workout">Morning Workout</string>
    <string name="begin">Begin</string>
    <string name="other_challenges">Other Challenges</string>
    <string name="history">History</string>
    <string name="save_progress">SAVE PROGRESS</string>
    <string name="chat">Chat</string>
    <string name="chat_with_coach">Chat with coach</string>
    <string name="technical_support">Technical support</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="shop">Shop</string>
    <string name="cart_total">Cart Total</string>
    <string name="subtotal">SubTotal</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">PayPal</string>
    <string name="in_app_purchase">In-App Purchase</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">CVV</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="search_trainer">SEARCH TRAINER</string>
    <string name="contact_us">Contact Us</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="exercises_history">Exercises History</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="remove_favourites">Remove favourites</string>
    <string name="remove_workouts">Remove from today’s Workout</string>
    <string name="bought">Subscribed</string>
    <string name="cant_bought">Can\'t Buy</string>
    <string name="add_to_today_s_workout">Add to today’s Workout</string>
    <string name="add_to_log">Add to log</string>
    <string name="log">Log</string>
    <string name="exercise_history">Exercise History</string>
    <string name="exercises">Exercises</string>
    <string name="search_exercise">SEARCH EXERCISE</string>
    <string name="title">Title</string>
    <string name="need_help_or_have_a_question_get_in_touch_with_us">Need help or have a question? Get in touch with us!</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="follow_us">Follow Us</string>
    <string name="pt_platform">PT Platform</string>
    <string name="food">Food</string>
    <string name="today">Today</string>
    <string name="target">Target</string>
    <string name="view_history">View History</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="exercise">Exercise</string>
    <string name="remaining">Remaining</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_breakfast">Add Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="add_lunch">Add Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="add_dinner">Add Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="add_snacks">Add Snacks</string>
    <string name="supplements">Supplements</string>
    <string name="add_supplements">Add Supplements</string>
    <string name="number_of_servings">Number of Servings</string>
    <string name="serving_size">Serving Size</string>
    <string name="calories">Calories</string>
    <string name="all">All</string>
    <string name="recipes">Recipes</string>
    <string name="meals">Meals</string>
    <string name="search_for_a_food">SEARCH FOR A FOOD</string>
    <string name="recent_items">Recent Items</string>
    <string name="workout_history">Workout History</string>
    <string name="nutrition_history">Nutrition History</string>
    <string name="coaches">Coaches</string>
    <string name="news">News</string>
    <string name="nutritions">Nutritions</string>
    <string name="progress">Progress</string>
    <string name="workouts">Workouts</string>
    <string name="kyc">KYC</string>
    <string name="personal_training">Personal Training</string>
    <string name="favorites">Favorites</string>
    <string name="today_s_workout">Today\'s Workout</string>
    <string name="video_chat">Video Chat</string>
    <string name="live_chat">Live Chat</string>
    <string name="recipes_and_diet_plans">Recipes and Diet Plans</string>
    <string name="your_content_will_be_ready_within_48_hours">Your content will be ready within 48 hours.</string>
    <string name="search_workout">SEARCH WORKOUT</string>
    <string name="personalised">Personalised</string>
    <string name="assigned_workouts">Assigned Workouts</string>
    <string name="assigned_meals">Assigned Meals</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="notes">Notes</string>
    <string name="end_date">End Date</string>
    <string name="package_title">Package</string>
    <string name="ingredients">Ingredients</string>
    <string name="how_to_make_it">How to make it</string>
    <string name="zayd">Zayd</string>
    <string name="member_since_oct_2020">Member since Oct 2020</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="body_measurements">Body Measurements</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="add_new_measurements">Add new Measurements</string>
</resources>