<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_radius_20_title"
    android:gravity="bottom"
    android:paddingVertical="@dimen/_15sdp"
    android:paddingHorizontal="@dimen/_15sdp"
    android:layout_marginHorizontal="@dimen/_25sdp"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/add_new_value"
        />

    <EditText
        android:id="@+id/date_et"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/date"
        android:inputType="date"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/neck_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/neck"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/chest_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/chest"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/left_arm_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/left_arm"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/right_arm_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/right_arm"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/waist_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/waist"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/belly_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/belly"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/belly_lower_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/lower_belly"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/belly_upper_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/upper_belly"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/hips_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/hips"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/left_thigh_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/left_thigh"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/right_thigh_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/background_white_border"
        android:hint="@string/right_thigh"
        android:inputType="number"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/left_calf_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/background_white_border"
        android:hint="@string/left_calf"
        android:inputType="number"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/right_calf_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/right_calf"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/primary_color"
        android:backgroundTint="@color/white"
        android:background="@drawable/btn_rounded_white"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"/>
</LinearLayout>
    </ScrollView>
</LinearLayout>