<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_radius_20_title"
    android:gravity="bottom"
    android:paddingVertical="@dimen/_15sdp"
    android:paddingHorizontal="@dimen/_15sdp"
    android:layout_marginHorizontal="@dimen/_25sdp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/add_new_value"
        />

    <EditText
        android:id="@+id/weight_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/weight"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/muscle_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/muscle"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/fat_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/fat"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/water_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/water"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/active_calories_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/active_calories"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:inputType="number"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/steps_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/steps"
        android:inputType="number"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/primary_color"
        android:backgroundTint="@color/white"
        android:background="@drawable/btn_rounded_white"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"/>

</LinearLayout>