<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_radius_20_title"
    android:gravity="bottom"
    android:paddingVertical="@dimen/_15sdp"
    android:paddingHorizontal="@dimen/_15sdp"
    android:layout_marginHorizontal="@dimen/_25sdp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/edit_profile"
        />


    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_border"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:inputType="textEmailAddress"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/primary_color"
        android:backgroundTint="@color/white"
        android:background="@drawable/btn_rounded_white"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"/>

</LinearLayout>